Adds purecss to the less file

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html.no-js
   head
     meta(charset="utf-8")
     title victorandree.se
+    link(rel="stylesheet", href="/css/app.css")
 
   body
     block header
