Testing out pure + less integration

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -1,6 +1,13 @@
-@import (inline) "pure/base.css";
-@import (inline) "pure/grids.css";
+@import (less) "pure/base.css";
+@import (less) "pure/grids.css";
 
 body {
-    background: black;
+}
+
+.test {
+    .pure-g;
+}
+
+.one, .two {
+    .pure-u-1-2;
 }
