--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,13 @@ html.no-js
 
   body
     block header
+
+    .test
+      .one
+        | one
+      .two
+        | two
     
     block content
 
     block footer
-      
